--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=bff-Agendador-Tarefas
+
+usuario.url=localhost:8080/usuario
+agendador-Tarefas.url=localhost:8081/tarefas
+server.port=8083
